--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,6 +33,14 @@
         <li class="nav-item">
           <a
             class="nav-link"
+            routerLink="/ajout-produit"
+            routerLinkActive="page-actuelle"
+            >Ajouter un produit</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
             routerLink="/inscription"
             routerLinkActive="page-actuelle"
             >Inscription</a
