--- a/src/app/pages/connection/connection.component.html
+++ b/src/app/pages/connection/connection.component.html
@@ -1,1 +1,25 @@
-<p>connection works!</p>
+<form (ngSubmit)="onConnection()" [formGroup]="formulaire">
+  <mat-form-field>
+    <mat-label>Email</mat-label>
+    <input matInput placeholder="Ex. john@doe.com" formControlName="email" />
+
+    @if(formulaire.get('email')?.hasError("required")) {
+    <mat-error>L'email est requis</mat-error>
+    } @else {
+    <mat-error>L'email est mal formé</mat-error>
+    }
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Mot de passe</mat-label>
+    <input matInput type="password" formControlName="password" />
+
+    @if(formulaire.get('password')?.hasError("required")) {
+    <mat-error>Le mot de passe est requis est requis</mat-error>
+    }
+  </mat-form-field>
+
+  <button [disabled]="!formulaire.valid" mat-raised-button type="submit">
+    Se connecter
+  </button>
+</form>
