--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+mat-snack-bar-container {
+  &.valid .mat-mdc-snackbar-surface {
+    background-color: green;
+  }
+
+  &.info .mat-mdc-snackbar-surface {
+    background-color: rgb(9, 31, 225);
+  }
+
+  &.warning .mat-mdc-snackbar-surface {
+    background-color: rgb(206, 134, 0);
+  }
+
+  &.error .mat-mdc-snackbar-surface {
+    background-color: rgb(203, 0, 0);
+  }
+}
