--- a/src/app/pages/accueil/accueil.component.html
+++ b/src/app/pages/accueil/accueil.component.html
@@ -1,4 +1,6 @@
 <div class="container">
+  @if(authService.user?.role == "administrateur" || authService.user?.role ==
+  "vendeur") {
   <button
     mat-raised-button
     routerLink="/ajout-produit"
@@ -6,9 +8,10 @@
   >
     Ajouter produit
   </button>
+  }
 
   <div class="row row-cols-3">
-    @for (item of this.userList; track $index) {
+    @for (item of this.produits; track $index) {
     <div class="px-2">
       <mat-card appearance="outlined" class="mt-4 card-container">
         <mat-card-header>
@@ -30,8 +33,10 @@
         </mat-card-content>
         <mat-card-actions>
           <button mat-button>Ajouter</button>
+          @if(authService.user?.role == "administrateur" ||
+          authService.user?.role == "vendeur") {
           <button mat-button>Modifier</button>
-          <button mat-button>Supprimer</button>
+          <button mat-button (click)="onDelete(item)">Supprimer</button>}
         </mat-card-actions>
       </mat-card>
     </div>
